# Job-Automation-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  ai_agent.py  browser_manager.py  job_searcher.py  main.py  resume_parser.py  test_env.py  utils.py
